# morphIIC

./: Cargo.toml  README.md
.cargo/: config.toml
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: heartbeat.rs  i2c_service.rs  log.rs  main.rs  model.rs  regfile.rs  streams.rs  usb_cli.rs  usb_stream.rs
models/: device_model.json
models/csv/: reg5_embedded.csv  reg6_host.csv
morphiic/: Cargo.toml
morphiic/src/: main.rs
test_code/g4_i2c_code/: Cargo.toml
test_code/g4_i2c_code/src/: main.rs
tools/csv_streamer/: Cargo.toml
tools/csv_streamer/src/: main.rs
tools/gen_model/: Cargo.toml
tools/gen_model/src/: lib.rs  main.rs
tools/gen_model/tests/: model_integ_tests.rs
tools/gen_model/tests/models/: invalid_csv_rw.json  invalid_duplicate_addr.json  invalid_enum.json  invalid_unknown_field.json  valid_mixed.json
tools/gen_model/tests/models/csv/: embedded.csv  host.csv
